# rust-keyboard

./: Cargo.toml  README.md
.cargo/: config
crc8/: Cargo.toml
crc8/src/: lib.rs  predefined.rs
framed/: Cargo.toml
framed/src/: common_tests.rs  constants.rs  lib.rs  macros.rs  sink.rs  stream.rs  sync_sink.rs
kbd/: Cargo.toml
kbd/src/: crc8.rs  decoder.rs  frame_stream.rs  keycode.rs  keycodes.rs  keys.rs  layout.rs  lib.rs  matrix.rs  msg.rs  msg_reader.rs  qwerty.rs
kbd/src/framed/: common_tests.rs  frame_sink.rs  frame_stream.rs  mod.rs  sync_sink.rs
left-half/: Cargo.toml  Makefile  mk20dx32.ld  platformio.ini  run-logic-analyzer.sh
left-half-k20/: Makefile
left-half-k20/.cargo/: config
left-half-k20/teensy/: build.rs
left-half-k20/teensy/src/: bindings.rs
left-half-samd21/: Makefile  platformio.ini
left-half-samd21/kbd/: Cargo.toml
left-half-samd21/src/: kbd.h  main.ino
left-half-teensy3/: Makefile  README.md
left-half-teensy3/src/: circular_buffer.rs  main.rs
left-half/.cargo/: config
left-half/kbd/: Cargo.toml
left-half/rust/: Cargo.toml  Makefile
left-half/rust/src/: lang_items.rs  lib.rs
left-half/src/: main.ino  main.rs
left-half/teensy/: Cargo.toml
right-half/: Makefile  README.md  platformio.ini
right-half/kbd/: Cargo.toml  Makefile  msp430.json
right-half/rust/: Cargo.toml  rustc-version
right-half/src/: main.cpp
teensy3-test/: platformio.ini
teensy3-test/src/: main.cpp
wiring/: Cargo.toml
wiring/src/: gpio.rs  gpio_impl.rs  gpio_mock.rs  lib.rs  serial.rs  serial_impl.rs  serial_mock.rs
(+12 files in other folders)
