[package]
name = "kbd_left_half"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
cortex-m = "0.1.6"
r0 = "0.2.0"
volatile-register = "0.1.2"
wiring = { path = "../../wiring" }
kbd = { path = "../../kbd" }

[dependencies.cortex-m-semihosting]
optional = true
version = "0.1.1"

[dependencies.compiler_builtins]
features = ["mem"]
git = "https://github.com/rust-lang-nursery/compiler-builtins"

[features]
semihosting = ["cortex-m-semihosting"]
