[package]
name = "kbd_left_half"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
cortex-m = "*"
r0 = "*"
volatile-register = "*"
wiring = { path = "../../wiring" }
kbd = { path = "../../kbd" }
framed = { path = "../../framed" }
futures = {path="/Users/emi/repos/futures-rs", version="*", default-features=false, features = ["nightly"]}

cortex-m-semihosting = {version = "*", optional = true}
compiler_builtins = {git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"]}

[features]
semihosting = ["cortex-m-semihosting"]
